package ar.edu.utn.ba.ddsi.sistema_climatico.observer;

import ar.edu.utn.ba.ddsi.sistema_climatico.domain.Alerta;

public interface ObservadorAlerta {
  void actualizar(Alerta alerta);
}
