@startuml

'==== DOMINIO ====

class Clima {
    +temperatura : double
    +humedad : int
    +descripcion : String
    +fechaHora : LocalDateTime
}

'Una alerta generada que contiene los datos necesarios para notificar
class Alerta {
    -clima : Clima
    -fecha : LocalDateTime
}

'==== WEATHER API ====
'Implementación rest del proveedor WeatherAPI

'Facil cambiar de proovedor
interface WeatherApiClient {
    +obtenerClimaActual() : RespuestaClima
}

class WeatherApiClientImpl

WeatherApiClientImpl ..|> WeatherApiClient

'Dtos del JSON recibido
class RespuestaClima {
    +climaActual : ClimaActual
}

class ClimaActual {
    +temperatura : double
    +humedad : int
    +condicionClimatica : CondicionClimatica
}

class CondicionClimatica {
    +text : String
}

'==== SERVICES ====
'Obtiene un Clima, lo analiza, crea una alerta y avisa al GestorAlertas
class AnalizadorClimatico {
    -estrategia : EstrategiaAlerta
    -gestorAlertas : GestorAlertas

    +analizar(clima)
}

class RegistroClimatico {
    -historial : List<Clima>

    +guardar(clima)
    +obtenerUltimo() : Clima
}

'==== PATRÓN FACADE ====
'Adapta el clima obtenido al modelo interno

class ClimaFacade {
    -weatherApiClient : WeatherApiClient
    -climaAdapter : ClimaAdapter
    -registroClimatico : RegistroClimatico
    -analizadorClimatico : AnalizadorClimatico

    +actualizarClima()
    +analizarUltimoClima()
}

'==== PATRÓN ADAPTER ====
'Convierte un RespuestaClima en un Clima del dominio

interface ClimaAdapter {
    +adaptar(response: RespuestaClima) : Clima
}

class WeatherApiAdapter

WeatherApiAdapter ..|> ClimaAdapter

'==== PATRÓN STRATEGY ====

interface EstrategiaAlerta {
    +esCondicionCritica(clima: Clima): boolean
}

class EstrategiaTemperaturaHumedad

EstrategiaTemperaturaHumedad ..|> EstrategiaAlerta

'==== PATRÓN OBSERVER ====

'Representa cualquier componente interesado en enterarse de una alerta
interface ObservadorAlerta {
    +actualizar(alerta: ALerta)
}

'Observador concreto
class EmailNotifier {
    +actualizar(alerta: Alerta)
}

'Contiene una lista de observadores para informar
class GestorAlertas {
    +suscribir(observador)
    +desuscribir(observador)
    +notificar(alerta)
}

'==== RELACIONES ====

ClimaFacade --> WeatherApiClient
ClimaFacade --> ClimaAdapter
ClimaFacade --> RegistroClimatico
ClimaFacade --> AnalizadorClimatico

WeatherApiClient --> RespuestaClima
WeatherApiAdapter --> RespuestaClima
WeatherApiAdapter --> Clima


RegistroClimatico --> Clima

AnalizadorClimatico --> EstrategiaAlerta
AnalizadorClimatico --> GestorAlertas

AnalizadorClimatico ..> Alerta

GestorAlertas o--> ObservadorAlerta
GestorAlertas --> Alerta

RespuestaClima --> ClimaActual
ClimaActual --> CondicionClimatica

EmailNotifier ..|> ObservadorAlerta

@enduml